Wrap the message content in a pre-scrollable to make sure it doesn't obliterate the screen real estate

--- a/src/ratpack/public/css/offtopic.css
+++ b/src/ratpack/public/css/offtopic.css
@@ -14,3 +14,6 @@ body {
     margin-left: 3px;
     margin-right: 3px;
 }
+
+.message-raw {
+}
